<resources>
    <string name="app_name">SingleScreenApp</string>
    <string name="number">+918980808585</string>
    <string name="Email">info@jagdish-farshan.com</string>
    <string name="Address">151,Krishna Kunj Society,\nNext to Krishna hospital,\nNew V.I.P Road,\nVadodara, Gujarat , India - 390022</string>
    <string name="web">http://www.jagdishfarshan.com/</string>
    <string name="name">Jagdish Farshan</string>
</resources>
