<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/jagdishlogo"
        android:layout_weight="1"
        tools:ignore="Suspicious0dp"
        android:padding="@dimen/padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="Suspicious0dp"
        android:layout_weight="1"
        android:layout_marginVertical="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/iconsbusiness"
                android:padding="@dimen/padding"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/name"
                android:textAppearance="?android:textAppearanceLarge"
                android:autoLink="map" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginVertical="36dp"
                android:src="@drawable/iconsmarker"
                android:padding="@dimen/padding"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/Address"
                android:textAppearance="?android:textAppearanceLarge"
                android:autoLink="map" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="@dimen/padding"
                android:src="@drawable/iconsenvelope"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/Email"
                android:textAppearance="?android:textAppearanceLarge"
                android:autoLink="email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="@dimen/padding"
                android:src="@drawable/iconsphone"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/number"
                android:textAppearance="?android:textAppearanceLarge"
                android:autoLink="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="@dimen/padding"
                android:src="@drawable/iconsglobe"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/web"
                android:textAppearance="?android:textAppearanceLarge"
                android:autoLink="web" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>